2007-01-30  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=12486
        XPathNSResolver.lookupNamespaceURI should return null if no URI is found

        * dom/svg/level3/xpath/XPathNSResolver_lookupNamespaceURI_nist_dmstc-expected.txt:
        * dom/svg/level3/xpath/XPathNSResolver_lookupNamespaceURI_null-expected.txt:
        These tests now pass.

2007-01-30  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Oliver.

        Update svg baseline after svg text repaint rect fixes.

        * svg/W3C-SVG-1.1/pservers-grad-08-b-expected.txt:
        * svg/W3C-SVG-1.1/pservers-grad-11-b-expected.txt:
        * svg/W3C-SVG-1.1/render-elems-07-t-expected.txt:
        * svg/W3C-SVG-1.1/render-elems-08-t-expected.txt:
        * svg/W3C-SVG-1.1/struct-use-01-t-expected.txt:
        * svg/W3C-SVG-1.1/text-altglyph-01-b-expected.txt:
        * svg/W3C-SVG-1.1/text-deco-01-b-expected.txt:
        * svg/W3C-SVG-1.1/text-text-08-b-expected.txt:
        * svg/custom/text-repaint-including-stroke-expected.checksum: Added.
        * svg/custom/text-repaint-including-stroke-expected.png: Added.
        * svg/custom/text-repaint-including-stroke-expected.txt: Added.
        * svg/custom/text-repaint-including-stroke.svg: Added.
        * svg/custom/use-on-text-expected.txt:

2007-01-30  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=12452
        XPath id() function is not supported

        * dom/svg/level3/xpath/Conformance_ID-expected.txt:
        This test now passes.

        * fast/xpath/complex-id-expected.txt: Added.
        * fast/xpath/complex-id.html: Added.
        A test for more advanced id() capabilities.

2007-01-31  Mark Rowe  <mrowe@apple.com>

        Disable editing/pasteboard/paste-{RTFD,TIFF}.html so tests run to completion until a fix is landed for:
        http://bugs.webkit.org/show_bug.cgi?id=12474