@@ -1,0 +1,35 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {P} at (0,0) size 784x18
+        RenderText {#text} at (0,0) size 53x18
+          text run at (0,0) width 53: "Test for "
+        RenderInline {I} at (0,0) size 707x18
+          RenderInline {A} at (0,0) size 301x18 [color=#0000EE]
+            RenderText {#text} at (53,0) size 301x18
+              text run at (53,0) width 301: "http://bugs.webkit.org/show_bug.cgi?id=12373"
+          RenderText {#text} at (354,0) size 406x18
+            text run at (354,0) width 4: " "
+            text run at (358,0) width 402: "ASSERTION FAILURE: !child->needsLayout() on paypal.com"
+        RenderText {#text} at (760,0) size 4x18
+          text run at (760,0) width 4: "."
+      RenderBlock {P} at (0,34) size 784x18
+        RenderText {#text} at (0,0) size 175x18
+          text run at (0,0) width 175: "No assert means test PASS."
+      RenderTable {TABLE} at (0,68) size 4x0
+        RenderInline {FORM} at (0,0) size 0x0
+      RenderTable {TABLE} at (0,68) size 4x2
+        RenderTableSection {TBODY} at (0,0) size 4x2
+          RenderInline {FORM} at (0,0) size 0x0
+      RenderTable {TABLE} at (0,70) size 4x2
+        RenderTableSection {THEAD} at (0,0) size 4x2
+          RenderInline {FORM} at (0,0) size 0x0
+      RenderTable {TABLE} at (0,72) size 4x2
+        RenderTableSection {TFOOT} at (0,0) size 4x2
+          RenderInline {FORM} at (0,0) size 0x0
+      RenderTable {TABLE} at (0,74) size 4x4
+        RenderTableSection {TBODY} at (0,0) size 4x4
+          RenderTableRow {TR} at (0,2) size 4x0
+            RenderInline {FORM} at (0,0) size 0x0
