@@ -1,0 +1,47 @@
+<html>
+<head>
+    <title></title>
+    <style>
+        form { display: inline; }
+    </style>
+</head>
+<body>
+<p>
+    Test for <i><a href="http://bugs.webkit.org/show_bug.cgi?id=12373">http://bugs.webkit.org/show_bug.cgi?id=12373</a>
+    ASSERTION FAILURE: !child->needsLayout() on paypal.com</i>.
+</p>
+<p>
+    No assert means test PASS.
+</p>
+<table>
+<form></form>
+</table>
+
+<table>
+<tbody>
+<form></form>
+</tbody>
+</table>
+
+<table>
+<thead>
+<form></form>
+</thead>
+</table>
+
+<table>
+<tfoot>
+<form></form>
+</tfoot>
+</table>
+
+<table>
+<tbody>
+<tr>
+<form></form>
+</tr>
+</tbody>
+</table>
+
+</body>
+</html>
